--- a/config/database.yml
+++ b/config/database.yml
@@ -85,11 +85,11 @@ production:
   #
   # NineFold
   #
-  # database: db13059
-  # username: app
-  # host: 210.193.180.199
-  # password: <%= ENV['DB_PASSWORD'] %>
+  database: db13059
+  username: app
+  host: 210.193.180.199
+  password: <%= ENV['DB_PASSWORD'] %>
   #
   # Heroku
   #
-  url: <%= ENV['DATABASE_URL'] %>
+  # url: <%= ENV['DATABASE_URL'] %>
